--- a/src/main/resources/public/pages/showroom.html
+++ b/src/main/resources/public/pages/showroom.html
@@ -14,6 +14,7 @@
         {
             "imports": {
                 "three": "https://unpkg.com/three@0.152.0/build/three.module.js",
+                "three/examples/jsm/": "https://unpkg.com/three@0.152.0/examples/jsm/",
                 "three/addons/": "https://unpkg.com/three@0.152.0/examples/jsm/"
             }
         }
