--- a/src/main/resources/public/pages/cars-info.html
+++ b/src/main/resources/public/pages/cars-info.html
@@ -17,69 +17,7 @@
 </head>
 
 <body>
-<header class="nav-header" id="header">
-    <a href="/index" class="logo">
-        <img class="logo-img" src="../images/logo.png" alt="Logo">
-    </a>
-    <div class="h1">
-        <h1>Where Luxury Meets Performance</h1>
-    </div>
-    <div class="container">
-        <button class="hamburger" id="hamburgerButton">
-            <i class="fas fa-bars"></i>
-            <span class="menuText">Menu</span>
-        </button>
-        <ul class="menu" id="menu">
-            <li><a class="menuItem" href="/index" onclick="setHamburgerRelative(event)"><i
-                    class="fas fa-home"></i>
-                Home</a></li>
-            <li style="display: none;" id="profile"><a class="menuItem"
-                                                       href="/profile"
-                                                       onclick="setHamburgerRelative(event)"><i class="fas fa-user"></i>Profile</a>
-            </li>
-            <li><a class="menuItem" href="/auto-show" onclick="setHamburgerRelative(event)"><i
-                    class="fas fa-car"></i>
-                Auto
-                Show</a></li>
-            <li id="log-in-text"><a class="menuItem" href="/login"
-                                    onclick="setHamburgerRelative(event)"><i class="fas fa-sign-in-alt"></i>Log in</a>
-            </li>
-            <li style="display: none;" id="log-out-text"><a class="menuItem" href="#"
-                                                            onclick="setHamburgerRelative(event)"><i
-                    class="fas fa-sign-in-alt"></i>Log out</a></li>
-            <li><a class="menuItem" href="#" onclick="setHamburgerRelative(event)"><i
-                    class="fas fa-info-circle"></i> About</a></li>
-        </ul>
-    </div>
-    <nav class="navs">
-        <nav>
-            <ul>
-                <li><a href="/index"><i class="fas fa-home"></i></a></li>
-                <li style="display: none;" id="profile"><a
-                        href="/profile"><i
-                        class="fas fa-user"></i></a></li>
-                <li><a href="/auto-show"><i class="fas fa-car"></i></a></li>
-                <li id="log-in-icon"><a href="/login"><i
-                        class="fas fa-sign-in-alt"></i></a></li>
-                <li style="display: none;" id="log-out-icon"><a href="#"><i class="fas fa-sign-out-alt"></i></a>
-                </li>
-                <li><a href="#"><i class="fas fa-info-circle"></i></a></li>
-            </ul>
-        </nav>
-        <nav>
-            <ul id="nav-text">
-                <li><a href="/index">Home</a></li>
-                <li style="display: none;" id="profile"><a
-                        href="/profile">Profile</a></li>
-                <li class="auto-show"><a href="/auto-show">Auto Show</a></li>
-                <li id="log-in-text"><a href="/login">Log in</a>
-                </li>
-                <li style="display: none;" id="log-out-text"><a href="#">Log out</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
-        </nav>
-    </nav>
-</header>
+<div th:utext="${nav}"></div>
 <script src="../js%20scripts/mobile-menu.js"></script>
 <div id="loader"></div>
 <div th:if="${access == 'no-access'}">
