new logic for vehicles specification info

--- a/src/main/resources/public/pages/index.html
+++ b/src/main/resources/public/pages/index.html
@@ -167,7 +167,7 @@
         });
     });
 </script>
-<script>
+<script defer>
     document.addEventListener('DOMContentLoaded', function () {
         const carCards = document.querySelectorAll('#last .car-card');
         carCards.forEach(function (card) {
